--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -98,9 +98,12 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800 text-center mt-3">STOCK ANALYST</h1>
-                        <a routerLink="/dashboard" routerLinkActive="active" class="d-none d-sm-inline-block btn btn-sm  shadow-sm bannercontrolpanel"><i
-                                class=" fas fa-download fa-sm text-white-50"></i> Dashboard</a>
-
+                        <div>
+                        <a routerLink="/market" routerLinkActive="active" class=" mx-2 d-none d-sm-inline-block btn btn-sm  shadow-sm bannercontrolpanel"><i
+                                class=" fas fa-download fa-sm text-white-50"></i> Market</a>
+                                <a routerLink="/dashboard" routerLinkActive="active" class="d-none d-sm-inline-block btn btn-sm  shadow-sm bannercontrolpanel "><i
+                                  class=" fas fa-download fa-sm text-white-50"></i> Dashboard</a>
+                                </div>
                     </div>
 
                     <!-- Content Row -->
